<resources xmlns:tools="http://schemas.android.com/tools">
<!--    DinhHoaTran - n01354661-->
    <string name="app_name">DinhHoaTrann01354661</string>
    <string name="firt_name">Dinh</string>
    <string name="last_name">Hoa</string>
    <string name="student_id">n01354661</string>
    <string name="runtime">runtime permission</string>
    <string name="duration_200">200s</string>
    <string name="duration_400">400s</string>
    <string name="duration_600">600s</string>
    <string name="duration_800">800s</string>
    <string name="denied">permission denied</string>
</resources>